--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; URL='./consultaAtaColacaoGrau/consulta/'" />
+  <meta http-equiv="refresh" content="0; URL='./consulta/'" />
 </head>
 <body>
   <p>Redirecionando...</p>
