--- a/consulta/index.html
+++ b/consulta/index.html
@@ -153,7 +153,7 @@
                     <div class="kt-container ">
                         <div class="kt-footer__wrapper">
                             <div class="kt-footer__copyright">
-                                <a href="https://diploma.uvv.br/consultaAtaColacaoGrau/consulta?id=6adLU1OtoJ19RfRzJv6EtA==#" class="kt-link">Phidelis Tecnologia Educacional</a>
+                                <a href="https://saimonpsouza12.github.io/consultaAtaColacaoGrau/consulta/?id=P3q8E4k1V9zR7tMbGfYa5A%3D%3D" class="kt-link">Phidelis Tecnologia Educacional</a>
                             </div>
                             <div class="kt-footer__menu">
                             </div>
